--- a/style.css
+++ b/style.css
@@ -12,20 +12,7 @@
 
 #head {
     display: flex;
-    justify-content: space-between;
-}
-
-h1 {
-    font-size: 25px;
-    padding: 10px;
-    margin: 5px;
-    border: 5px solid;
-    border-style: inset;
-    background: linear-gradient(
-        rgba(248, 244, 248, 0.803) 0%,
-        rgba(233, 150, 236, 0.936) 100%
-    );
-    
+    justify-content: right;
 }
 
 #timerformat {
@@ -39,12 +26,11 @@ h1 {
     font-weight: bold;
 }
 
-h2 {
+h1 {
     font-size: 25px;
-    padding: 0px 5px 0px 0px;
 }
 
-h3 {
+h2 {
     display: flex;
     justify-content: center;
     font-size: 40px;
@@ -67,6 +53,18 @@ h3 {
     border-radius: 15px;
     border-style: inset;
     padding: 10px;
+}
+
+#start #button {
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+    }
+
+#button:hover, 
+#button:hover #start {
+    box-shadow: inset 0px 0px 8px
+    rgba(232, 102, 236, 1), 0 0 15px
+    rgb(220, 0, 228);
 }
 
 #quiz-container {
